--- a/perfil.html
+++ b/perfil.html
@@ -18,7 +18,7 @@
                 <input id="password-input" style="width: 100%;" placeholder="Password"></input>
                 <button onclick="iniciarSesion()" type="button" class="btn btn-success">Iniciar Sesión</button>
                 <p>¿No estas registrado aún?</p>
-                <p>Regístrate</p>
+                <a href='registro.html'><p>Regístrate</p></a>
             </div>
         </div>
         <!-- <button onclick="cerrarSesion()">Cerrar Sesión</button> -->
@@ -85,7 +85,10 @@
         </div>
           <div id="points" class="tabcontent">
             <h3>Daviniair points</h3>
-            
+            <div class="chart-container" style="position: relative; width:40%">
+                <canvas id="myChart" width="400" height="400"></canvas>
+            </div>
+            <div id="mostrarPoints"></div>
           </div>
 
           <div id="pago" class="tabcontent">
@@ -96,7 +99,9 @@
             <h3>Historial de compra</h3>
           </div>
     </section>
-    <script src="usuario.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="clases.js"></script>
+    <script src="perfil.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
